--- a/sass/components/_table_of_contents.scss
+++ b/sass/components/_table_of_contents.scss
@@ -4,7 +4,7 @@
 ul.table-of-contents {
   &.fixed {
       position: fixed;
-      top: 10px;
+      top: 0px;
     }
 
   li {
